--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "bluebird": "^3.3.5",
     "jquery": "^2.2.3",
+    "lodash": "^4.12.0",
     "outlines": "0.0.7",
+    "random-js": "^1.0.8",
     "superagent": "^1.8.3",
     "superagent-promise": "^1.1.0",
+    "watson-developer-cloud": "^1.7.0",
     "webrtc-adapter": "^1.1.0"
   },
   "babel": {
